--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <string name="habit_text_view">Habit</string>
     <string name="tacker_text_view">Tracker</string>
-    <string name="view_habits_button_text">VIEW HABITS</string>
+    <string name="view_habits_button_text">VIEW ALL HABITS</string>
 
     <string name="completed_habits">Completed Habits</string>
-    <string name="add_habit">Add Habit</string>
+    <string name="add_habit">Edit Habits</string>
 </resources>
