--- a/README
+++ b/README
@@ -28,6 +28,11 @@ Github Repository URL:
 https://github.com/michelleTagarino/as1.git
 
 
+YouTube URL:
+——————————————————————
+https://www.youtube.com/watch?v=sxhBdorB9co
+
+
 Project Structure
 ——————————————————————
 Compile Sdk Version - API 24: Android 7.0 (Nougat)
