--- a/README
+++ b/README
@@ -9,7 +9,7 @@ What is Habit Tracker?
 ——————————————————————
 Habit Tracker is an open source application that may be used by a single user at a time
 to record, complete, and track their habits. Habits may be anything that the user does
-in his/her spare time. 
+in their spare time. 
 
 
 How to use it?
