Gender is a social construct

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ the name of their habit in the text box at the bottom. When they press the ADD H
 button, the app will prompt the user to check the weekdays that the habit may be 
 completed. Each item may be long clicked to provide the option to delete or complete
 the habit. In the app menu bar at the top, the user can view a list of the habits that
-he/she has already completed. Any habit can be completed more than once. The user may
+they have already completed. Any habit can be completed more than once. The user may
 also delete past habit completions as well.
 
 
